jira-sts.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: app-jira
  name: app-jira
  namespace: jira
  annotations:
    haproxy.org/check: "true"
    haproxy.org/forwarded-for: "false"
    haproxy.org/load-balance: "roundrobin"
    haproxy.org/cookie-persistence: "mycookie"
spec:
  selector:
    app: app-jira
  ports:
  - name: port-jira
    port: 8080
    protocol: TCP
    targetPort: 8080

---

apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app: app-jira
  name: app-jira
  namespace: jira
spec:
  serviceName: "app-jira"
  replicas: 1 #2
  # kubectl scale statefulset/app-jira --replicas=2 -n jira
  selector:
    matchLabels:
      app: app-jira
  template:
    metadata:
      labels:
        app: app-jira
    spec:
      containers:
      - image: atlassian/jira-software:8.19.0-ubuntu
        imagePullPolicy: Always
        # resources:
        #    requests:
        #      memory: "4G"
        #      cpu: 1 #2
        #    limits:
        #      memory: "6G"
        #      cpu: 2 #4
        name: app-jira
        ports:
          - containerPort: 8080
            name: jiraport
          - containerPort: 40001
            name: jiraclusterport
        volumeMounts:
        - name: jira-pvc-data
          mountPath: "/var/atlassian/application-data/jira"
        - name: jira-pvc-shared
          mountPath: "/var/atlassian/shared"
      volumes:
        - name: jira-pvc-data
          emptyDir:
            {}
        - name: jira-pvc-shared
          persistentVolumeClaim:
            claimName: jira-pvc-shared
