ingress-jira.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jira-ingress
  namespace: jira
spec:
  tls:
  - hosts:
      - jira.kubernetes.local
    secretName: jira
  rules:
  - host: jira.kubernetes.local
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: app-jira
            port:
              number: 8080
